Fixed overview width overflow and layout 00

--- a/style/admin.css
+++ b/style/admin.css
@@ -1,3 +1,4 @@
+#wpbody-content{ width:98% !important;}
 /* menu & icons */
 #rb-overview-icon { background:transparent url(../style/rb-icon-gray-32.png) no-repeat scroll; }
 
